--- a/watch/app/src/main/res/drawable/stopbutton.xml
+++ b/watch/app/src/main/res/drawable/stopbutton.xml
@@ -7,5 +7,5 @@
         android:radius="30dp"/>
     <stroke
         android:width="3dp"
-        android:color="#FF1515"/>
+        android:color="#500C0C"/>
 </shape>
