--- a/watch/app/src/main/res/layout/activity_countdown.xml
+++ b/watch/app/src/main/res/layout/activity_countdown.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="타이틀"
-        android:textColor="@color/whitegreen"
+        android:textColor="@color/black"
         android:fontFamily="@font/thejamsil_medium"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
