--- a/watch/app/src/main/res/layout/fragment_ifirst.xml
+++ b/watch/app/src/main/res/layout/fragment_ifirst.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/actiback4">
+    android:background="@drawable/interback98">
 
     <com.example.gaenari.activity.iactivity.ICircleProgress
         android:id="@+id/circleProgress"
@@ -25,10 +25,9 @@
         android:src="@raw/dog1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.157"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.312" />
+        app:layout_constraintVertical_bias="0.781" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvIntervals"
@@ -41,73 +40,86 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- Other TextViews and ImageView for displaying running data -->
+
+
     <TextView
         android:id="@+id/달린거리"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/thejamsil_medium"
         android:text="0.65"
-        android:textColor="@color/mainblue"
-        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.304"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rvIntervals" />
 
-    <!-- Other TextViews and ImageView for displaying running data -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="km"
+        android:textColor="@color/black"
+        android:fontFamily="@font/thejamsil_medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.325"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/달린거리" />
 
     <TextView
         android:id="@+id/달린시간"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="100dp"
         android:fontFamily="@font/thejamsil_medium"
         android:text="00:00:00"
-        android:textColor="@color/whitegreen"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/달린거리"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textColor="@color/black"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.696"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/속력"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="68dp"
         android:fontFamily="@font/thejamsil_medium"
-        android:text="GPS 수신중. . ."
-        android:textColor="@color/whitegreen"
-        android:textSize="15sp"
-        app:layout_constraintTop_toBottomOf="@+id/달린시간"
+        android:text="0.0"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.854"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="km/h"
+        android:textSize="11sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/thejamsil_medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.899"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/속력" />
 
     <TextView
         android:id="@+id/심박수"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="68dp"
         android:fontFamily="@font/thejamsil_medium"
         android:text="150"
-        android:textColor="@color/whitegreen"
-        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.392"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/속력" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BPM"
-        android:textColor="@color/whitegreen"
-        android:fontFamily="@font/thejamsil_medium"
-        android:textSize="12sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/심박수"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.584"
+        app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
