--- a/watch/app/src/main/res/layout/fragment_tfirst.xml
+++ b/watch/app/src/main/res/layout/fragment_tfirst.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/actiback93">
+    android:background="@drawable/timeback988">
 
 
-    <ImageView
+    <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifImageView"
-        android:layout_width="73dp"
-        android:layout_height="73dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:scaleType="fitCenter"
         android:src="@raw/dog98"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,8 +18,7 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.504" />
-
+        app:layout_constraintVertical_bias="0.805" />
 
     <com.example.gaenari.activity.tactivity.TCircleProgress
         android:id="@+id/circleProgress"
@@ -33,14 +32,15 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/체크1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="168dp"
-        android:text="ㅎㅇㅎㅇ"
-        android:textColor="@color/lightyellow"
+        android:layout_marginTop="21dp"
+        android:fontFamily="@font/thejamsil_medium"
+        android:text="남은시간"
+        android:textColor="@color/black"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.416"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,23 +48,13 @@
         android:id="@+id/달린거리"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="37dp"
         android:fontFamily="@font/thejamsil_medium"
         android:text="0.65"
-        android:textColor="@color/mainblue"
+        android:textColor="#20720B"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="14dp"
-        android:layout_height="14dp"
-        android:layout_marginTop="44dp"
-        android:src="@drawable/imgheart2"
-        app:layout_constraintEnd_toEndOf="@id/guideline15"
-        app:layout_constraintStart_toStartOf="@id/guideline16"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -72,26 +62,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="78dp"
         android:fontFamily="@font/thejamsil_medium"
         android:text="0.00"
-        android:textColor="@color/mainyellow"
+        android:textColor="@color/black"
         android:textSize="11sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline20"
-        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="@+id/guideline19"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="90dp"
         android:fontFamily="@font/thejamsil_medium"
         android:text="km"
-        android:textColor="@color/mainyellow"
-        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:textSize="10sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline20"
-        app:layout_constraintHorizontal_bias="0.521"
+        app:layout_constraintHorizontal_bias="0.384"
         app:layout_constraintStart_toStartOf="@+id/guideline19"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -101,24 +91,26 @@
         android:layout_height="wrap_content"
 
         android:layout_below="@id/달린시간"
-        android:layout_marginTop="42dp"
         android:fontFamily="@font/thejamsil_medium"
         android:text="3.75"
-        android:textColor="#21DC29"
+        android:textColor="@color/black"
         android:textSize="11sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
-        app:layout_constraintStart_toStartOf="@+id/guideline17"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintStart_toStartOf="@+id/guideline17" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="110dp"
         android:fontFamily="@font/thejamsil_medium"
         android:text="km/h"
-        android:textColor="#21DC29"
-        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:textSize="10sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
+        app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="@+id/guideline17"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -127,28 +119,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/달린거리"
-        android:layout_marginTop="60dp"
+        android:layout_marginBottom="81dp"
         android:fontFamily="@font/thejamsil_medium"
         android:text="20"
-        android:textColor="#F32222"
+        android:textColor="@color/black"
         android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline15"
-        app:layout_constraintStart_toStartOf="@id/guideline16"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.619"
+        app:layout_constraintStart_toStartOf="@id/guideline16" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.15" />
+        app:layout_constraintGuide_begin="25dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.35416666" />
+        app:layout_constraintGuide_begin="68dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline17"
@@ -162,14 +155,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.85" />
+        app:layout_constraintGuide_end="34dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.390625" />
+        app:layout_constraintGuide_end="117dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline20"
