--- a/watch/app/src/main/res/layout/fragment_tsecond.xml
+++ b/watch/app/src/main/res/layout/fragment_tsecond.xml
@@ -9,9 +9,8 @@
     <!-- 달리기 종료 버튼 -->
     <com.example.gaenari.CircularProgressButton
         android:id="@+id/circularProgressButton"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:padding="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
