--- a/watch/app/src/main/res/values/colors.xml
+++ b/watch/app/src/main/res/values/colors.xml
@@ -5,11 +5,13 @@
     <color name="btn_start">#8ACA3F</color>
     <color name="btn_restart">#E46B5B</color>
     <color name="btn_pause">#E39D12</color>
-<color name="gray">#CACACA</color>
+    <color name="gray">#CACACA</color>
+    <color name="gray2">#EFF615</color>
 
     <color name="blue">#0D3A7D</color>
     <color name="mainblue">#38A2DF</color>
     <color name="dd1">#6EA8FF</color>
+    <color name="countdown1">#87C3E4</color>
 
     <color name="mainyellow">#FFCE22</color>
     <color name="maingreem">#5DC76C</color>
